src/components/ListItem/ListItem.css
.icon-del,
.icon-edit {
  font-size: 2rem;
  padding: 0;
  background-color: transparent;
  border: none;
  cursor: pointer;
}
svg {
  width: 100%;
  height: 100%;
}
.icon-del {
  color: #025f58;
  font-size: 2.25rem;
}
li {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0.75rem;
  font-size: 1.5rem;
  box-shadow: 0 0 3px;
  border-radius: 0.75rem;
  background-color: rgb(70, 237, 165);
  align-items: center;
  width: min(27rem, 100%);
}
li h2,
h3 {
  margin: 0;
}
.details {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.details h3 {
  font-weight: normal;
}
.li-buttons {
  display: flex;
  gap: 0.75rem;
}
.Modal {
  background-color: hsla(0, 0%, 0, 90%);
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  gap: 2rem;
}
.Modal .btn {
  align-self: center;
  margin: 0;
}
.Modal .buttons {
  display: flex;
  justify-content: center;
  gap: 1.5rem;
}

/* code from https://reactcommunity.org/react-modal/styles/transitions/ */
.ReactModal__Overlay {
  opacity: 0;
  transition: opacity 0.25s ease-in-out;
}

.ReactModal__Overlay--after-open {
  opacity: 1;
}

.ReactModal__Overlay--before-close {
  opacity: 0;
}

@media only screen and (min-width: 45em) {
  li {
    padding: 2rem;
  }
  .icon-edit {
    font-size: 3rem;
  }
  .icon-del {
    font-size: 3.25rem;
  }
}

